[metadata]
name = kaitaiStructCompile
author = KOLANICH
url = https://gitlab.com/KOLANICH1/kaitaiStructCompile.py
description = the package to compile .ksy into .py while installing/building a python package
long_description = file: ReadMe.md
keywords = KaitaiStruct, compiler, binary format, setuptools, automation
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = kaitaiStructCompile, kaitaiStructCompile.compile
setup_requires = setuptools; setuptools_scm;
test_suite = tests.test
install_requires = 
	setuptools
	jsonschema
	GitPython
dependency_links =
	git+https://github.com/Julian/jsonschema.git#egg=jsonschema-dev
	git+https://github.com/gitpython-developers/GitPython.git#egg=GitPython-dev
	git+https://github.com/pypa/setuptools.git#egg=setuptools-dev

[options.entry_points]
distutils.setup_keywords = kaitai = kaitaiStructCompile.setuptoolsHelper:kaitaiHelper
